syntax = "proto3";

option go_package = "../pb;pb";

message MessageResponse {
  int32 result = 1;
}

message MessageRequest {
  int32 firstNum = 1;
  int32 secondNum = 2;
}

service MessageSender {
  rpc Send(MessageRequest) returns (MessageResponse) {}
}